--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,21 +1,22 @@
 FROM sonarqube:6.5-alpine
 
-ENV SQ_GIT_VERSION=1.3.0.737 \
-    SQ_SVN_VERSION=1.5.0.755 \
-    SQ_JAVA_VERSION=4.13.0.11410 \
-    SQ_JS_VERSION=3.2.0.5195 \
-    SQ_TS_VERSION=1.0.0.354 \
-    SQ_PHP_VERSION=2.11.0.2274 \
-    SQ_PY_VERSION=1.9.0.1609 \
-    SQ_CSHARP_VERSION=6.4.0.3304 \
-    SQ_XML_VERSION=1.5.0.999 \
-    SQ_WEB_VERSION=2.6.0.800 \
-    SQ_LDAP_VERSION=2.2.0.618 \
-    SQ_GO_VERSION=1.2.10-rc2 \
+ENV SQ_GIT_VERSION=1.3.0.769 \
+    SQ_SVN_VERSION=1.5.0.782 \
+    SQ_JAVA_VERSION=4.14.0.11768 \
+    SQ_JS_VERSION=3.2.0.5305 \
+    SQ_TS_VERSION=1.1.0.380 \
+    SQ_PHP_VERSION=2.11.0.2299 \
+    SQ_PY_VERSION=1.9.0.1639 \
+    SQ_CSHARP_VERSION=6.5.0.3587 \
+    SQ_XML_VERSION=1.5.0.1132 \
+    SQ_WEB_VERSION=2.6.0.826 \
+    SQ_LDAP_VERSION=2.2.0.623 \
+    SQ_GO_VERSION=1.2.11-rc2 \
     SQ_CF_VERSION=1.5.0 \
     SQ_FINDSEC_VERSION=3.5.0 \
-    SQ_GITHUB_VERSION=1.5.0.940 \
-    SQ_GITLAB_VERSION=2.1.0-rc1 \
+    SQ_GITHUB_VERSION=1.5.0.966 \
+    SQ_GITLAB_VERSION=2.1.0 \
+    SQ_PITEST_VERSION=0.8-RC1 \
     SQ_CITY_VERSION=1.0
 
 RUN set -x \
@@ -37,6 +38,7 @@ RUN set -x \
     && wget --no-verbose https://github.com/stepstone-tech/sonar-coldfusion/releases/download/$SQ_CF_VERSION/sonar-coldfusion-plugin-$SQ_CF_VERSION.jar \
     && wget --no-verbose https://github.com/gabrie-allaigre/sonar-gitlab-plugin/releases/download/$SQ_GITLAB_VERSION/sonar-gitlab-plugin-$SQ_GITLAB_VERSION.jar \
     && wget --no-verbose https://github.com/SonarQubeCommunity/sonar-findbugs/releases/download/$SQ_FINDSEC_VERSION/sonar-findbugs-plugin.jar \
+    && wget --no-verbose https://github.com/VinodAnandan/sonar-pitest/releases/download/v$SQ_PITEST_VERSION/sonar-pitest-plugin-$SQ_PITEST_VERSION.jar \
     && wget --no-verbose https://github.com/stefanrinderle/softvis3d/releases/download/softvis3d-$SQ_CITY_VERSION/sonar-softvis3d-plugin-$SQ_CITY_VERSION.jar
 
 WORKDIR $SONARQUBE_HOME
