Travis docker push

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,9 @@ services:
 
 script:
   - ./build.sh
+  
+after_success:
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then
+    docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+    docker push owasp/sonarqube;
+    fi
