sonar-pitest plugin update

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -16,7 +16,7 @@ ENV SQ_GIT_VERSION=1.3.0.769 \
     SQ_FINDSEC_VERSION=3.6.0 \
     SQ_GITHUB_VERSION=1.5.0.966 \
     SQ_GITLAB_VERSION=2.1.0 \
-    SQ_PITEST_VERSION=0.8-RC2 \
+    SQ_PITEST_VERSION=0.8 \
     SQ_CITY_VERSION=1.0
 
 RUN set -x \
