--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -74,5 +74,10 @@ VOLUME "$SONARQUBE_HOME/data"
 
 WORKDIR $SONARQUBE_HOME
 COPY run.sh $SONARQUBE_HOME/bin/
-RUN chmod +x $SONARQUBE_HOME/bin/run.sh
+RUN dos2unix $SONARQUBE_HOME/bin/run.sh && chmod +x $SONARQUBE_HOME/bin/run.sh
+
+RUN chmod -R 777 $SONARQUBE_HOME
+RUN chown -R sonarqube:sonarqube $SONARQUBE_HOME
+USER sonarqube
+
 ENTRYPOINT ["./bin/run.sh"]
